# memory_manager

./: CMakeLists.txt  main.c  mmemory.h  paging.c  paging.h  unit_tests.c
tests/: load_tests.c  load_tests.h  unit_tests.c  unit_tests.h
tests/unit_tests/: free_tests.c  free_tests.h  init_tests.c  init_tests.h  malloc_tests.c  malloc_tests.h  read_tests.c  read_tests.h  write_tests.c  write_tests.h
